// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gRPC Dynamic Gateway convertBody() should handle {cool: true}, * 1`] = `
Object {
  "cool": true,
}
`;

exports[`gRPC Dynamic Gateway convertBody() should handle {cool: true}, cool 1`] = `true`;

exports[`gRPC Dynamic Gateway convertHeaders() should convert a Authorize token in header to a metadata object 1`] = `
Metadata {
  "_internal_repr": Object {
    "authorize": Array [
      "Bearer DUMMY_TOKEN",
    ],
  },
}
`;

exports[`gRPC Dynamic Gateway convertParams() should handle /v1/hi/{name} 1`] = `
Object {
  "name": "Cool",
  "v1": true,
  "v2": false,
}
`;

exports[`gRPC Dynamic Gateway convertUrl() should correctly convert /{version}/hi/{name}/{cool} into express URL 1`] = `"/:version/hi/:name/:cool"`;

exports[`gRPC Dynamic Gateway convertUrl() should correctly convert /v1/hi/{name} into express URL 1`] = `"/v1/hi/:name"`;

exports[`gRPC Dynamic Gateway getParamsList() should find params in /{version}/hi/{name}/{cool} 1`] = `
Array [
  "version",
  "name",
  "cool",
]
`;

exports[`gRPC Dynamic Gateway getParamsList() should find params in /v1/hi/{name} 1`] = `
Array [
  "name",
]
`;
